--- a/Tugas-2/about.html
+++ b/Tugas-2/about.html
@@ -19,21 +19,21 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>      
       </nav>
-    </header>file:///C:/Users/User/sanbercode-reactjs-0820-1/Tugas-2/about.html
+    </header>
     <section>	
-	<center><h1>Data Peserta Sanbercode Bootcamp Reactjs</h1></center>
-	<!-- Menambahkan Ordered List dan juga mengubah format teks menjadi bold-->
-	<ol>
-		<li><b>Nama </b>: Hariono Mahalluddin Sinaga</li>
-		<li><b>Email</b>: h4ry7naga@gmail.com</li>
-		<li><b>Sistem Operasi</b>: Windows 10</li>
-		<li><b>Akun Github</b>: harry7naga</li>
-		<li><b>Akun Telegram</b>: +62 821 3696 9137</li>
-	</ol>
+	     <center><h1>Data Peserta Sanbercode Bootcamp Reactjs</h1></center>
+	       <!-- Menambahkan Ordered List dan juga mengubah format teks menjadi bold-->
+	       <ol>
+		        <li><b>Nama </b>: Hariono Mahalluddin Sinaga</li>
+		        <li><b>Email</b>: h4ry7naga@gmail.com</li>
+		        <li><b>Sistem Operasi</b>: Windows 10</li>
+		        <li><b>Akun Github</b>: harry7naga</li>
+		        <li><b>Akun Telegram</b>: +62 821 3696 9137</li>
+	        </ol>
     </section>
 	<a href="index.html">Kembali Ke Index</a>
 	<footer>
       <h5>copyright &copy; 2020 by Sanbercode</h5>
-    </footer>
+  </footer>
 </body>
 </html>
