--- a/Tugas-2/about.html
+++ b/Tugas-2/about.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8"/>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="public/css/style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 	<title>About</title>
 </head>
 <body>
-	<header>
+  <header>
       <nav>
-        <div class="logo">
-        <img id="logo" src="public/css/logo.png" width="200px"/>
-        </div>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li style="float: left;"><img id="logo" src="public/css/logo.png" width="200px"/></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a class="active" href="about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>      
       </nav>
     </header>
-    <section>	
-	     <center><h1>Data Peserta Sanbercode Bootcamp Reactjs</h1></center>
-	       <!-- Menambahkan Ordered List dan juga mengubah format teks menjadi bold-->
-	       <ol>
-		        <li><b>Nama </b>: Hariono Mahalluddin Sinaga</li>
-		        <li><b>Email</b>: h4ry7naga@gmail.com</li>
-		        <li><b>Sistem Operasi</b>: Windows 10</li>
-		        <li><b>Akun Github</b>: harry7naga</li>
-		        <li><b>Akun Telegram</b>: +62 821 3696 9137</li>
-	        </ol>
+    <section>
+        <center><h1>Data Peserta Sanbercode Bootcamp Reactjs</h1></center>
+      	<form>
+          <span>1.<b>Nama</b>: Hari Sinaga</span>
+          <br>
+          <span>2.<b>Email</b>: h4ry7naga@gmail.com</span>
+          <br>
+          <span>3.<b>Akun Telegram</b>: 0821 3696 9137</span>
+          <br>
+          <span>4.<b>Akun Github</b>: harry7naga</span>
+          <br>
+          <span>5.<b>Sistem operasi</b>: Windows 10</span>
+        </form>
+        </div>
     </section>
 	<a href="index.html">Kembali Ke Index</a>
-	<footer>
-      <h5>copyright &copy; 2020 by Sanbercode</h5>
-  </footer>
 </body>
 </html>
