--- a/Tugas-2/contact.html
+++ b/Tugas-2/contact.html
@@ -10,21 +10,19 @@
 <body>
 	<header>
       <nav>
-        <div class="logo">
-        <img id="logo" src="public/css/logo.png" width="200px"/>
-        </div>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+        	<li style="float: left;"><img id="logo" src="public/css/logo.png" width="200px"/></li>
+          	<li><a class="active" href="contact.html">Contact</a></li>
+          	<li><a href="about.html">About</a></li>
+          	<li><a href="index.html">Home</a></li>
         </ul>      
       </nav>
     </header>
-    <section>
-    	
-	<div style="margin: 0px auto; width: 50%" >
-	<center><h1>Hubungi Kami </h1></center>
-	<form>
+
+    <section>	
+		<div style="margin: 0px auto; width: 50%" >
+		<center><h1>Hubungi Kami </h1></center>
+		<form>
 		<span><b>Nama</b>: Hari Sinaga</span>
 		<br>
 		<span><b>Nomor Telepon</b>: 0821 3696 9137</span>
