--- a/Tugas-2/index.html
+++ b/Tugas-2/index.html
@@ -9,13 +9,11 @@
   <body>
     <header>
       <nav>
-        <div class="logo">
-        <img id="logo" src="public/css/logo.png" width="200px"/>
-        </div>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li style="float: left;"><img id="logo" src="public/css/logo.png" width="200px"/></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
         </ul>      
       </nav>
     </header>
